# Olivetum-GPU-Miner

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: windows-build.yml
cmake/cable/: README.md
ethminer/: main.cpp
libdevcore/: Common.h  CommonData.cpp  CommonData.h  FixedHash.h  vector_ref.h
libethash-cl/: CLMiner.cpp  CLMiner.h  CMakeLists.txt
libethash-cl/CL/: cl2.hpp
libethash-cl/kernels/cl/: olivetumhash.cl
libethash-cpu/: CPUMiner.cpp
libethash-cuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner.h  cuda_arches.h.in  ethash_cuda_miner_kernel.h  olivetumhash_cuda_miner_kernel.cu
libethcore/: CMakeLists.txt  EthashAux.cpp  EthashAux.h  Farm.cpp  Miner.h  OlivetumhashAux.cpp  OlivetumhashAux.h
libpoolprotocols/: CMakeLists.txt  PoolManager.cpp  PoolManager.h  PoolURI.cpp
libpoolprotocols/getwork/: EthGetworkClient.cpp  EthGetworkClient.h
libpoolprotocols/testing/: SimulateClient.cpp  SimulateClient.h
scripts/: benchmark_cuda_presets.sh
tests/: cuda_arch_list_test.cpp  olivetumhash_cl_selftest.cpp  olivetumhash_selftest.cpp  olivetumhash_vectors.cpp
